; ModuleID = '/home/carl/AnghaBench/tig/src/extr_parse.c_get_path.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_parse.c_get_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.path_entry = type { i8* }

@path_cache = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_path(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.path_entry*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call %struct.path_entry* @string_map_get(i32* @path_cache, i8* %5)
  store %struct.path_entry* %6, %struct.path_entry** %4, align 8
  %7 = load %struct.path_entry*, %struct.path_entry** %4, align 8
  %8 = icmp ne %struct.path_entry* %7, null
  br i1 %8, label %32, label %9

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = call i64 @strlen(i8* %10)
  %12 = add i64 8, %11
  %13 = call %struct.path_entry* @calloc(i32 1, i64 %12)
  store %struct.path_entry* %13, %struct.path_entry** %4, align 8
  %14 = load %struct.path_entry*, %struct.path_entry** %4, align 8
  %15 = icmp ne %struct.path_entry* %14, null
  br i1 %15, label %16, label %21

16:                                               ; preds = %9
  %17 = load i8*, i8** %3, align 8
  %18 = load %struct.path_entry*, %struct.path_entry** %4, align 8
  %19 = call i32 @string_map_put(i32* @path_cache, i8* %17, %struct.path_entry* %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %24, label %21

21:                                               ; preds = %16, %9
  %22 = load %struct.path_entry*, %struct.path_entry** %4, align 8
  %23 = call i32 @free(%struct.path_entry* %22)
  store i8* null, i8** %2, align 8
  br label %36

24:                                               ; preds = %16
  %25 = load %struct.path_entry*, %struct.path_entry** %4, align 8
  %26 = getelementptr inbounds %struct.path_entry, %struct.path_entry* %25, i32 0, i32 0
  %27 = load i8*, i8** %26, align 8
  %28 = load i8*, i8** %3, align 8
  %29 = load i8*, i8** %3, align 8
  %30 = call i64 @strlen(i8* %29)
  %31 = call i32 @strncpy(i8* %27, i8* %28, i64 %30)
  br label %32

32:                                               ; preds = %24, %1
  %33 = load %struct.path_entry*, %struct.path_entry** %4, align 8
  %34 = getelementptr inbounds %struct.path_entry, %struct.path_entry* %33, i32 0, i32 0
  %35 = load i8*, i8** %34, align 8
  store i8* %35, i8** %2, align 8
  br label %36

36:                                               ; preds = %32, %21
  %37 = load i8*, i8** %2, align 8
  ret i8* %37
}

declare dso_local %struct.path_entry* @string_map_get(i32*, i8*) #1

declare dso_local %struct.path_entry* @calloc(i32, i64) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @string_map_put(i32*, i8*, %struct.path_entry*) #1

declare dso_local i32 @free(%struct.path_entry*) #1

declare dso_local i32 @strncpy(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
